--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -14,3 +14,10 @@
 @import '@fortawesome/fontawesome-free/scss/brands.scss';
 //vue2-dropzone
 @import './vue2-dropzone.scss';
+//Bootstrap
+// Fonts
+@import url('https://fonts.googleapis.com/css?family=Nunito');
+// Variables
+@import 'variables';
+// Bootstrap
+@import '~bootstrap/scss/bootstrap';
